## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

libCopspp_includedir = $(pkgincludedir)

libCopspp_include_DATA = \
	SocketServer.h\
	COPSAcctTimer.h\
	COPSmessage.h\
	COPSClientSI.h\
	COPSCommonHeader.h\
	COPSContext.h\
	COPSDecision.h\
	COPSError.h\
	COPSHandle.h\
	COPSINInt.h\
	COPSKATimer.h\
	COPSOUTInt.h\
	COPSLastPDPAddr.h\
	COPSObj.h\
	COPSPDPRedirAddr.h\
	COPSPEPID.h\
	COPSReportType.h\
	COPSReason.h\
	PDP.h\
	PDPchild.h\
	PEP.h\
	Socket.h\
	SocketClient.h\
	color.h

EXTRA_DIST = $(libCopspp_include_DATA)
