## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

INCLUDES = -I../include

AM_CFLAGS =\
	 -Wall -fPIC\
	 -O2
	 -gstabs -Wimplicit -Wunused -fno-inline -g

AM_CXXFLAGS =\
	 -Wall -fPIC\
	 -O2
	 -gstabs -Wimplicit -Wunused -fno-inline -g 

lib_LIBRARIES = libCopspp.a

libCopspp_a_SOURCES = \
	Socket.cc\
	Socket.h\
	SocketServer.cc\
	SocketServer.h\
	SocketClient.cc\
	SocketClient.h\
	COPSCommonHeader.cc\
	COPSCommonHeader.h\
	PDP.cc\
	PDP.h\
	PEP.cc\
	PEP.h\
	COPSPEPID.cc\
	COPSPEPID.h\
	COPSObj.cc\
	COPSObj.h\
	COPSmessage.cc\
	COPSmessage.h\
	COPSKATimer.cc\
	COPSKATimer.h\
	COPSError.cc\
	COPSError.h\
	PDPchild.cc\
	PDPchild.h\
	COPSHandle.cc\
	COPSHandle.h\
	COPSContext.cc\
	COPSContext.h\
	COPSDecision.cc\
	COPSDecision.h\
	COPSLPDPDecision.cc\
	COPSLPDPDecision.h\
	COPSReportType.cc\
	COPSReportType.h\
	COPSReason.cc\
	COPSReason.h\
	COPSClientSI.cc\
	COPSClientSI.h\
	COPSINInt.cc\
	COPSINInt.h\
	COPSOUTInt.cc\
	COPSOUTInt.h\
	COPSAcctTimer.cc\
	COPSAcctTimer.h\
	COPSPDPRedirAddr.cc\
	COPSPDPRedirAddr.h\
	COPSLastPDPAddr.h\
	COPSLastPDPAddr.cc\
	color.h



libCopspp_a_LIBADD = 

