## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

bin_PROGRAMS = cops_server cops_cliente
INCLUDES = -I../include
LDADD = -L../src/ -lCopspp 

cops_cliente_SOURCES = \
	cops_cliente.cc\
	color.h
cops_server_SOURCES = \
	cops_server.cc\
	color.h

